# hascar

./: .travis.yml  README.md  changelog.md  hascar.cabal  hascar.nix  release.nix  stack.yaml
app/: GPL.hs  Main.hs  Options.hs
src/: BitStream.hs  CanonicalHuffmanTree.hs  FlatedFile.hs  FlexibleUtils.hs  GPL.hs  SAPCAR.hs
src/Codec/Archive/: SAPCAR.hs
src/Codec/Archive/SAPCAR/: BitStream.hs  CanonicalHuffmanTree.hs  FlatedFile.hs  FlexibleUtils.hs  Pat.hs
test/: Spec.hs  test6.sar
