name:                hascar
version:             0.1.0.0
synopsis:            Decompress and compress SAP CAR files
description:         Please see README.md
homepage:            https://github.com/hce/hascar#readme
license:             MIT
license-file:        LICENSE
author:              Hans-Christian Esperer <hc@hcesperer.org>
maintainer:          Hans-Christian Esperer <hc@hcesperer.org>
copyright:           2016, Virtual Forge GmbH
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SAPCAR
                     , BitStream
                     , CanonicalHuffmanTree
                     , FlatedFile
                     , FlexibleUtils
                     , GPL
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5.1.0 && < 0.6
                     , attoparsec >= 0.13.0.2 && < 0.14
                     , binary >= 0.7.5.0 && < 0.8
                     , bytestring >= 0.10.6.0 && < 0.11
                     , containers >= 0.5.6.2 && < 0.6
                     , conduit >= 1.2.6.6 && < 1.3
                     , exceptions >= 0.8.2.1 && < 0.9
                     , mtl >= 2.2.1 && < 2.3
                     , path >= 0.5.7 && < 0.6
                     , pretty-show >= 1.6.10 && < 1.7
                     , text >= 1.2.2.1 && < 1.3
                     , time >= 1.5.0.1 && < 1.6
  default-language:    Haskell2010

executable hascar
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , binary >= 0.7.5.0 && < 0.8
                     , bytestring >= 0.10.6.0 && < 0.11
                     , directory >= 1.2.2.0 && < 1.3
                     , hascar
                     , optparse-applicative >= 0.12.1.0 && < 0.13
                     , path >= 0.5.7 && < 0.6
                     , pretty-show >= 1.6.10 && < 1.7
                     , text >= 1.2.2.1 && < 1.3
                     , transformers >= 0.4.2.0 && < 0.5
  default-language:    Haskell2010

test-suite hascar-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hascar
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hascar
